--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -49,7 +49,7 @@ YunoHost en tant que projet n'est *pas* apolitique. Par sa nature même, YunoHos
 
 YunoHost n'est *pas* conçu pour « passer à l'échelle » au sens traditionnel du terme. Il est conçu pour un nombre relativement modeste de comptes et d'utilisateurices simultanés. Bien qu'il n'y ait pas de limite stricte - puisque les performances dépendent fortement de votre configuration spécifique - nous estimons que des ajustements techniques peuvent s'avérer nécessaires à partir de 250 à 500 comptes, ou de ~50 utilisateur⋅ice⋅s simultanés sur des applications gourmandes. Ceci étant dit, YunoHost peut aisément héberger des sites web ou autres services légers recevant des milliers de visites quotidiennes.
 
-YunoHost est avant tout conçu pour les personnes qui veulent que ça "juste marche". Évidemment, le projet n'est pas parfait - nous travaillons constamment à l'amélioration de l'expérience utilisateur⋅ice, à la robustesse et à la simplicité du système. Bien que YunoHost soit "bidouillable", la cible principale n'est pas les "power users" qui ont en tête des cas d'utilisation complexes ou hautement avancés. Nous vous encourageons à garder votre installation **aussi simple que possible**. Ceci étant dit, vous êtes les bienvenu⋅e⋅s à expérimenter et à nous faire part de vos retours !
+YunoHost est avant tout conçu pour les personnes qui veulent que ça "juste marche". Évidemment, le projet n'est pas parfait - nous travaillons constamment à l'amélioration de l'expérience utilisateurice, à la robustesse et à la simplicité du système. Bien que YunoHost soit "bidouillable", la cible principale n'est pas les "power users" qui ont en tête des cas d'utilisation complexes ou hautement avancés. Nous vous encourageons à garder votre installation **aussi simple que possible**. Ceci étant dit, vous êtes les bienvenu⋅e⋅s à expérimenter et à nous faire part de vos retours !
 
 YunoHost n'est *pas* conçu pour être une solution de mutualisation *lourde* fournissant des services à de multiples organisations complètement séparées à travers différents domaines. Bien que qu'il est possible d'héberger des services pour des amis, des collègues, une association - le tout sous des domaines différents -, vous devez garder à l'esprit qu'il n'y a pas d'isolation stricte entre les applications. Sous le capot, toutes les applications partagent le même système et le même environnement.
 
