--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -51,7 +51,7 @@ YunoHost n'est *pas* conçu pour « passer à l'échelle » au sens traditionnel
 
 YunoHost est avant tout conçu pour les personnes qui veulent que ça "juste marche". Évidemment, le projet n'est pas parfait - nous travaillons constamment à l'amélioration de l'expérience utilisateurice, à la robustesse et à la simplicité du système. Bien que YunoHost soit "bidouillable", la cible principale n'est pas les "power users" qui ont en tête des cas d'utilisation complexes ou hautement avancés. Nous vous encourageons à garder votre installation **aussi simple que possible**. Ceci étant dit, vous êtes les bienvenu⋅e⋅s à expérimenter et à nous faire part de vos retours !
 
-YunoHost n'est *pas* conçu pour être une solution de mutualisation *lourde* fournissant des services à de multiples organisations complètement séparées à travers différents domaines. Bien que qu'il est possible d'héberger des services pour des amis, des collègues, une association - le tout sous des domaines différents -, vous devez garder à l'esprit qu'il n'y a pas d'isolation stricte entre les applications. Sous le capot, toutes les applications partagent le même système et le même environnement.
+YunoHost n'est *pas* conçu pour être une solution de mutualisation *lourde* fournissant des services à de multiples organisations complètement séparées à travers différents domaines. Bien qu'il soit possible d'héberger des services pour des amis, des collègues, une association - le tout sous des domaines différents -, vous devez garder à l'esprit qu'il n'y a pas d'isolation stricte entre les applications. Sous le capot, toutes les applications partagent le même système et le même environnement.
 
 (Note pour les utilisateurs expérimentés) YunoHost n'utilise pas de technologie de conteneurisation "dure" telles que Docker pour les applications. Ceci découle à la fois de raisons historiques, mais aussi pour garder le système léger - à la fois en termes de ressources et de complexité technique. Cela dit, nous prenons la sécurité au sérieux : les applications fonctionnent sous des comptes d'utilisateurs dédiés avec des privilèges et des capacités limités, et nous travaillons continuellement à l'amélioration de la sécurité du système.
 
