Add a mention that the demo is reseted every 30 minutes

--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/20.demo.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/20.demo.mdx
@@ -10,7 +10,7 @@ import {YunoHostDocsCard, YunoHostDocsCardHeading} from '@site/src/components/Yu
 # Essayer YunoHost sur un serveur de démonstration
 
 :::caution
-Cette démo peut cesser de fonctionner de temps en temps, mais au moins vous pouvez tester, et ça c’est vraiment chouette :)
+Cette démo est *réinitialisée toutes les 30 minutes* et peut cesser de fonctionner de temps en temps, mais au moins vous pouvez tester, et ça c’est vraiment chouette :)
 :::
 
 <div style={{display: "flex"}} >
