--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/20.demo.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/20.demo.mdx
@@ -12,7 +12,7 @@ import {YunoHostDocsCard, YunoHostDocsCardHeading} from '@site/src/components/Yu
 # Try YunoHost on a demo server
 
 :::caution
-This demo server could be down from time to time, but at least you can test and that's really cool :)
+This demo server is reset *every 30 minutes* and could be down from time to time, but at least you can test and that's really cool :)
 :::
 
 <div style={{display: "flex"}} >
