[enh] Initial config after install tuto

--- a/docs/admin/05.install/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.install/20.install_on/on_top_of_debian.mdx
@@ -9,6 +9,7 @@ sidebar_class_name: hidden
 ---
 
 import InstallScript from "./_install_script.mdx";
+import InitialConfiguration from "./_configuration.mdx";
 
 YunoHost is easily installable on Debian !
 
@@ -62,3 +63,5 @@ The installer will ask which **desktop environment** you want. This is generally
 4. Install curl by typing `apt install curl`
 
 <InstallScript />
+
+<InitialConfiguration />
