--- a/docs/admin/05.install/20.install_on/remote_server.mdx
+++ b/docs/admin/05.install/20.install_on/remote_server.mdx
@@ -9,6 +9,7 @@ sidebar_class_name: hidden
 ---
 
 import InstallScript from "./_install_script.mdx";
+import InitialConfiguration from "./_configuration.mdx";
 
 ## <FAIcon icon="fa-list-alt"/> Pre-requisites
 
@@ -20,3 +21,5 @@ import InstallScript from "./_install_script.mdx";
 You will need to connect to your server via `ssh`.
 
 <InstallScript />
+
+<InitialConfiguration />
