--- a/docs/admin/05.install/20.install_on/regular_computer.mdx
+++ b/docs/admin/05.install/20.install_on/regular_computer.mdx
@@ -8,6 +8,8 @@ pagination_next: admin/install/post_install/configuration
 sidebar_class_name: hidden
 ---
 
+import InitialConfiguration from "./_configuration.mdx";
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import YunoHostImagesList from '@site/src/components/YunoHostImagesList';
@@ -166,4 +168,4 @@ Keep in mind that:
 If the YunoHost installer fails and you can't solve the issue, know that it's also possible to install Debian and then install YunoHost on top. See [the specific instructions](/admin/install/install_on/on_top_of_debian#-run-the-install-script).
 :::
 
-Now that YunoHost is installed, you can now go through [the initial post-install configuration](/admin/install/post_install/configuration).
+<InitialConfiguration />
