--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -3,81 +3,48 @@ sidebar_label: Theme the portal
 title: Customize the appearance of the user portal
 ---
 
-## Globally disable the overlay
+The portal is customizable from the webadmin:
+ `Domains` > Choose a top level domain > `Features`
 
-You can disable the overlay by changing the dedicated settings:
+## Options for the Portal customization
 
-```bash
-yunohost settings set ssowat.panel_overlay.enabled -v 0
-```
+### Show the list of public apps to visitors
+Visitors will see a 'public apps' page when ending up on the portal instead of just the login form.
 
-## Using a theme
+### Show other domain's apps
 
-You can change the theme of the user portal in the admin panel, under Tools > YunoHost settings > Other > User portal.
+All apps from all domains will be visible on the portal. Default value is `true`.
 
-You can list the available themes with:
+### Custom title
 
-```bash
-ls /usr/share/ssowat/portal/assets/themes/
-```
+Choose a Title for the Portal
 
-Then you can use `nano /etc/ssowat/conf.json.persistent` to enable the theme you choose like this:
+### Custom logo
 
-```json
-{
-    "theme": "light",
-    ...other lines...
-}
-```
+Choose a image. Accept .svg, .png and .jpeg. Prefer a monochrome .svg with `fill: currentColor` so that the logo adapts to the themes.
 
-:::tip
-You might need to force the refresh of your browser's cache for the theme to fully propagate. You can do so with Ctrl+Shift+R on Firefox.
-:::
+### Default color theme
 
-## Adding someone else's theme
+Choose a color theme. Users are allowed to choose another one in their settings.
 
-You may add themes created by other people by downloading and extracting the corresponding files in a new folder `the_theme_name` in `/usr/share/ssowat/portal/assets/themes/`.
+* App tiles display theme
+    * simple = display apps icons
+    * descripitive = display apps icons and a descpriction of the application
+    * periodic = display tiles with name apps.
 
-:::warning
-Beware that adding third-party themes from random strangers on the internet **is a security risk**. It is equivalent to running someone's else code on your machine, which can be used for malicious purpose such as stealing credentials!
-:::
+### Search engine URL
 
-There are a handful of themes listed [on GitHub](https://github.com/yunohost-themes).
+This is an optional feature, allowing to display a search bar in the portal (for example if you like to use your YunoHost portal as your browser's home page). This should be an URL with an empty query string such as `https://duckduckgo.com/?q=, with q=` as duckduckgo's empty query parameter
 
-## Creating your own theme
+### Custom user intro
 
-You can create your own theme by copying the existing theme of your choice. For instance starting from the light theme:
+You can use HTML, basic styles will be applied to generic elements.
 
-```bash
-cp -r /usr/share/ssowat/portal/assets/themes/{light,your_own_theme}
-```
+### Custom public intro
 
-Then, edit the files the CSS and JS files in `/usr/share/ssowat/portal/assets/themes/your_own_theme` according to what you want to do:
+You can use HTML, basic styles will be applied to generic elements.
 
-- `custom_portal.css` can be used to add custom CSS rules to the user portal;
-- `custom_overlay.css` can be used to customize the small YunoHost button overlay, displayed on apps page which includes it;
-- `custom_portal.js` can be used to add custom JS code to be ran both on the user portal or when injecting the small YunoHost button / overlay.
+* Custom CSS stylesheet
 
-You can also add your own images and assets which can then be used by the CSS and JS files.
+This is for advanced admins willing to customize the appearance of the portal.
 
-:::tip
-[Share your custom theme with the community!](https://github.com/yunohost-themes)
-:::
-
-### Example : customizing the logo
-
-You may create your own theme simply to change the "branding" of the YunoHost user portal and replace the YunoHost logo with you own!
-
-To do so, upload your logo to `/usr/share/ssowat/portal/assets/themes/your_own_theme/`, and use the following CSS rules:
-
-```css
-/* Inside custom_portal.css */
-#ynh-logo {
-  background-image: url("./your_logo.png");
-}
-
-/* Inside custom_overlay.css */
-#ynh-overlay-switch {
-  background-image: url("./your_logo.png");
-}
-```
