Epic rework of the first sections structure, split the discussion about self hosting into two different pages, merge the install category with the previous 'self hosting' section into a 'get started' section.

--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -1,5 +1,6 @@
-# Choose your selfhosting method and providers
-
+---
+title: Choose your self-hosting mode
+---
 
 Puedes autohospedarte desde tu casa (desde un pequeño ordenador), o desde un servidor remoto. Cada solución tiene sus ventajas e inconvenientes:
 
@@ -80,16 +81,6 @@ export const styleDanger = {
       <td style={styleDanger}>Yes<br/><small>(see <Link to="/admin/self_hosting/providers/isp">here</Link>)</small></td>
       <td style={styleGood}>Bypassed by VPN</td>
       <td style={styleGood}>Typically no</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>CPU</td>
-      <td style={styleMeh} colspan="2">Typically ~1 GHz</td>
-      <td style={styleGood}>~2 GHz<br/><small>(Digital Ocean droplet)</small></td>
-    </tr>
-    <tr>
-      <td style={styleNone}>RAM</td>
-      <td style={styleMeh} colspan="2">Typically 500 Mb or 1 Gb</td>
-      <td style={styleMeh}>Related to server cost</td>
     </tr>
     <tr>
       <td style={styleNone}>Internet connectivity</td>
