--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -1,4 +1,6 @@
-# Choisissez votre méthode d'hébergement et vos fournisseurs
+---
+title: Choisissez votre mode d'auto-hébergement
+---
 
 Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
 
@@ -79,16 +81,6 @@ export const styleDanger = {
       <td style={styleDanger}>Oui<br/><small>(Voyez <Link to="/admin/self_hosting/providers/isp/">ici</Link>)</small></td>
       <td style={styleGood}>Contournées par VPN</td>
       <td style={styleGood}>En général non</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>CPU</td>
-      <td style={styleMeh} colspan="2">En général ~1 GHz</td>
-      <td style={styleGood}>~2 GHz<br/><small>(Digital Ocean droplet)</small></td>
-    </tr>
-    <tr>
-      <td style={styleNone}>RAM</td>
-      <td style={styleMeh} colspan="2">En général 500 Mb or 1 Gb</td>
-      <td style={styleMeh}>Coûts liés au serveur</td>
     </tr>
     <tr>
       <td style={styleNone}>Connexion internet</td>
