--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/02.why_should_you_not_host_yourself.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/02.why_should_you_not_host_yourself.mdx
@@ -1,15 +1,6 @@
 ---
-title: Self-hosting
-description: What is self-hosting?
+title: Why should you (not?) host yourself ?
 ---
-
-Il self-hosting permette di avere e di amministrare un tuo server, generalmente in proprio, per hostare i propri dati personali e servizi piuttosto che ospitarli presso terzi. Per esempio, è possibile gestire il proprio blog per farlo "vivere" su una macchina sotto il tuo controllo, piuttosto che installarlo su un computer di qualcun altro (a.k.a. il Cloud) in cambio di soldi, di pubblicità o di dati personali.
-
-Il self-hosting implica di avere a disposizione un server. Un server è un computer che è destinato ad essere accessibile in rete in modo permanente, e generalmente non ha un desktop o una tastiera perché è amministrato a distanza. Al contrario di quello che si crede, i server non sono necessariamente delle macchine enormi ed estremamente potenti: oggi una piccola scheda ARM a ~30 € è sufficiente per il self-hosting.
-
-![Internet topologies diagram](/img/internet_topologies.png)
-
-Praticare il self-hosting non rende il "tuo internet" più sicuro e non fornisce un sufficiente anonimato. L'obiettivo è generalmente quello dell'autonomia e del controllo dei propri servizi e dei propri dati, che implica anche l'esserne responsabili.
 
 ## Perché fare self-hosting?
 
