--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -1,4 +1,6 @@
-# Choose your selfhosting method and providers
+---
+title: Choose your self-hosting mode
+---
 
 Вы можете разместить его у себя дома (на небольшом компьютере) или на удаленном сервере. У каждого решения есть свои плюсы и минусы:
 
@@ -79,16 +81,6 @@ export const styleDanger = {
       <td style={styleDanger}>Yes<br/><small>(see <Link to="/admin/self_hosting/providers/isp">here</Link>)</small></td>
       <td style={styleGood}>Bypassed by VPN</td>
       <td style={styleGood}>Typically no</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>CPU</td>
-      <td style={styleMeh} colspan="2">Typically ~1 GHz</td>
-      <td style={styleGood}>~2 GHz<br/><small>(Digital Ocean droplet)</small></td>
-    </tr>
-    <tr>
-      <td style={styleNone}>RAM</td>
-      <td style={styleMeh} colspan="2">Typically 500 Mb or 1 Gb</td>
-      <td style={styleMeh}>Related to server cost</td>
     </tr>
     <tr>
       <td style={styleNone}>Internet connectivity</td>
