--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -32,15 +32,18 @@ export const styleNone = {
 };
 export const styleGood = {
   textAlign: 'center',
-  backgroundColor: '#335723',
+  backgroundColor: 'green',
+  color: 'white',
 };
 export const styleMeh = {
   textAlign: 'center',
-  backgroundColor: '#845804',
+  backgroundColor: 'darkgoldenrod',
+  color: 'white',
 };
 export const styleDanger = {
   textAlign: 'center',
-  backgroundColor: '#712C2C',
+  backgroundColor: 'brown',
+  color: 'white',
 };
 
 <table>
