Tweak menu entries, add emojis if that make sense ?

--- a/docs/admin/12.webadmin.mdx
+++ b/docs/admin/12.webadmin.mdx
@@ -1,11 +1,9 @@
 ---
-title: Administrator web interface
+title: ⭐ Webadmin interface
 ---
 
 YunoHost has an administrator web interface. The other way to administrate your YunoHost install is through the [command line](/admin/command_line).
 
-## Access
-
-You can access your administrator web interface at this address: `https://example.org/yunohost/admin` (replace `example.org` with your own domain name)
+The webadmin can be accessed at `https://yourdomain.tld/yunohost/admin` or using the local IP or global IP of your server (`https://1.2.3.4/yunohost/admin`)
 
 ![Webadmin screenshot](/img/webadmin/webadmin.jpg)
