--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
@@ -1,5 +1,5 @@
 ---
-title: Administrator web interface
+title: ⭐ Webadmin interface
 ---
 
 YunoHost hat ein Administrator-Webinterface. Die andere Möglichkeit, Ihre YunoHost-Installation zu administrieren, ist über die [Kommandozeile](/admin/command_line).
