--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/15.command_line.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/15.command_line.mdx
@@ -1,14 +1,5 @@
 ---
-title: SSH
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/ssh'
-  aliases:
-    - '/commandline'
-page-toc:
-  active: true
+title: 🛠️ SSH and command line
 ---
 
 ## Was ist SSH?
