--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/25.domains/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/25.domains/index.mdx
@@ -1,10 +1,5 @@
 ---
-title: Domains, DNS conf und Zertifikat
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/domains'
+title: 🌐 Domains
 ---
 
 YunoHost ermöglicht es Ihnen, mehrere Domains auf demselben Server zu verwalten und zu bedienen. Zum Beispiel können Sie einen Blog und Nextcloud auf einer ersten Domain `yolo.com` hosten, und einen Web-Mail-Client auf einer zweiten Domain `swag.nohost.me`. Jede Domain wird automatisch so konfiguriert, dass sie Web-, Mail- und XMPP-Dienste nutzen kann.
