--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
@@ -1,5 +1,5 @@
 ---
-title: Administrator web interface
+title: ⭐ Webadmin interface
 ---
 
 YunoHost tiene una interfaz gráfica de administración. El otro método consiste en utilizar la [linea de comando](/admin/command_line).
