--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
@@ -1,11 +1,9 @@
 ---
-title: Interface web de l’administrateur
+title: ⭐ Interface d'admin web
 ---
 
 YunoHost est fourni avec une interface graphique d’administration (aussi appelée webadmin). L’autre méthode d'administration est d’utiliser la [ligne de commande](/admin/command_line).
 
-### Accès
-
-L’interface d'administration web est accessible depuis votre instance YunoHost à l’adresse `https://exemple.org/yunohost/admin` (remplacez `exemple.org` par la bonne valeur)
+La webadmin est accessible à l’adresse `https://votredomaine.tld/yunohost/admin` ou via l'adresse IP locale ou globale (`https://1.2.3.4/yunohost/admin`)
 
 ![Webadmin screenshot](/img/webadmin/webadmin.jpg)
