--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/12.webadmin.mdx
@@ -1,5 +1,5 @@
 ---
-title: Administrator web interface
+title: ⭐ Webadmin interface
 ---
 
 YunoHost ha un'interfaccia web di amministrazione. L'altro metodo è quello di usare la [linea di comando](/admin/command_line).
