--- a/i18n/fr/docusaurus-plugin-content-docs/current/dev/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/dev/index.mdx
@@ -16,7 +16,7 @@ title: Contribute to YunoHost
 
   <Column className='text--center'>
 
-    Talk about software freedom, [self-hosting](/admin/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
+    Talk about software freedom, [self-hosting](/admin/about_self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
   </Column>
 </Columns>
 
