--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -5,7 +5,7 @@ description: " "
 
 <img src={require('/img/icons/logo-ynh_horizontal.png').default} alt="YunoHost logo" id="ynhlogo" style={{display: "block", textAlign: "center", margin: "auto", maxWidth: "300px", marginBottom: "1.5em"}}/>
 
-YunoHost это **операционная система** позволяющая легко администрировать **сервера**, и следовательно позволяет сделать [self-hosting](/admin/self_hosting) надёжным, безопасным, этическим и лёгким. Это свободнораспространяемая библиотека которая поддерживается исключительно волонтёрами. Технически, это дистрибутив основанный на [Debian GNU/Linux](https://debian.org).
+YunoHost это **операционная система** позволяющая легко администрировать **сервера**, и следовательно позволяет сделать [self-hosting](/admin/about_self_hosting) надёжным, безопасным, этическим и лёгким. Это свободнораспространяемая библиотека которая поддерживается исключительно волонтёрами. Технически, это дистрибутив основанный на [Debian GNU/Linux](https://debian.org).
 
 YunoHost can be installed on [many kinds of hardware](/admin/get_started/install_on), either at home or on a remote server (VPS).
 
