Moar bork links

--- a/docs/admin/55.upgrade/11.0-bullseye.mdx
+++ b/docs/admin/55.upgrade/11.0-bullseye.mdx
@@ -8,7 +8,7 @@ This page is dedicated to help you migrating an instance from YunoHost 4.4.x (ru
 
 - The YunoHost team did its best to make sure that the migration is as smooth as possible and was tested over the course of several months in several cases.
 
-- With that said, please be aware that this is a delicate operation. System administration is a complicated topic and covering every particular case is quite hard. Therefore, if you host critical data and services, please [make backups](/category/backups). And in any case, be patient and attentive during the migration.
+- With that said, please be aware that this is a delicate operation. System administration is a complicated topic and covering every particular case is quite hard. Therefore, if you host critical data and services, please [make backups](/admin/backups). And in any case, be patient and attentive during the migration.
 
 - Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/community/help).
 
