--- a/docs/admin/05.get_started/90.guidelines.mdx
+++ b/docs/admin/05.get_started/90.guidelines.mdx
@@ -36,7 +36,7 @@ Please don't do this. Reinstalling is a heavy operation and is not a good long-t
 
 ## Do backups
 
-If you host services and data that are important for your users, it is important that you setup a backup policy. Backups can be easily created from the webadmin - you can download it from the webadmin or via your favorite FTP client, such as FileZilla or your own terminal. You should perform backup regularly and keep them in a safe and different physical location from your server. More info on [the backup documentation](/category/backups).
+If you host services and data that are important for your users, it is important that you setup a backup policy. Backups can be easily created from the webadmin - you can download it from the webadmin or via your favorite FTP client, such as FileZilla or your own terminal. You should perform backup regularly and keep them in a safe and different physical location from your server. More info on [the backup documentation](/admin/backups).
 
 ## Check root’s email
 
