--- a/docs/admin/55.upgrade/12.0-bookworm/index.mdx
+++ b/docs/admin/55.upgrade/12.0-bookworm/index.mdx
@@ -8,7 +8,7 @@ This page is dedicated to help you migrating an instance from YunoHost 11.x (run
 
 - The YunoHost team did its best to make sure that the migration is as smooth as possible and was tested over the course of several months in several cases.
 
-- Please [backup your data and server](/category/backups)! This migration is a complex operation and covering every pitfall is quite hard. And in any case, be patient and attentive during the migration.
+- Please [backup your data and server](/admin/backups)! This migration is a complex operation and covering every pitfall is quite hard. And in any case, be patient and attentive during the migration.
 
 - Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/community/help).
 
