--- a/docs/admin/index.mdx
+++ b/docs/admin/index.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 
 # YunoHost admin documentation
 
-Here, you'll learn [the basics of self-hosting](/admin/about_self_hosting), how to [install YunoHost](/admin/install) and [configure it](/admin/get_started/post_install/configuration).
+Here, you'll learn [the basics of self-hosting](/admin/about_self_hosting), how to [install YunoHost](/admin/get_started/install_on) and [configure it](/admin/get_started/post_install/configuration).
 
 Then you'll be able to [add users](/admin/users), [domains](/admin/domains) and [apps](/admin/apps), and ensure [backups](/admin/backups) are done properly.
 
