--- a/docs/dev/index.mdx
+++ b/docs/dev/index.mdx
@@ -18,7 +18,7 @@ This section is under refactoring.
   </Column>
 
   <Column className='text--center'>
-    Talk about software freedom, [self-hosting](/admin/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
+    Talk about software freedom, [self-hosting](/admin/about_self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
   </Column>
 </Columns>
 
