--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/90.guidelines.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/90.guidelines.mdx
@@ -36,7 +36,7 @@ Non farlo. La reinstallazione è un'operazione difficile e non è un buona strat
 
 ## Fai i backup
 
-Se ospiti dei servizi e dei dati che sono importanti per i tuoi utenti, è importante mettere in atto una policy di backup. I backup possono essere creati facilmente a partire dall'interfaccia web di amministrazione - anche se non possono attualmente essere scaricati da li (ma possono essere scaricati con un altro mezzo). Dovrai effettuare regolarmente dei backup e custodirli in un luogo fisico diverso dal tuo server. Trovi altre informazioni nella [documentazione di backup](/category/backups).
+Se ospiti dei servizi e dei dati che sono importanti per i tuoi utenti, è importante mettere in atto una policy di backup. I backup possono essere creati facilmente a partire dall'interfaccia web di amministrazione - anche se non possono attualmente essere scaricati da li (ma possono essere scaricati con un altro mezzo). Dovrai effettuare regolarmente dei backup e custodirli in un luogo fisico diverso dal tuo server. Trovi altre informazioni nella [documentazione di backup](/admin/backups).
 
 ## Controlla le mail inviate a root
 
