--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/55.upgrade/11.0-bullseye.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/55.upgrade/11.0-bullseye.mdx
@@ -8,7 +8,7 @@ L'objectif cette page est de décrire le processus de migration d'une instance e
 
 - L'équipe de YunoHost a fait de son mieux pour que cette migration se passe autant en douceur que possible. Elle a été testée durant plusieurs mois et sur plusieurs types d'installations.
 
-- Néanmoins, vous devez être conscient qu'il s'agit d'une opération délicate. L'administration système est un sujet compliqué et couvrir tous les cas particuliers n'est pas chose aisée. En conséquence, si vous hébergez des données et des systèmes critiques, [faites des sauvegardes](/category/backups). Et dans tous les cas, soyez patients et attentifs durant la migration.
+- Néanmoins, vous devez être conscient qu'il s'agit d'une opération délicate. L'administration système est un sujet compliqué et couvrir tous les cas particuliers n'est pas chose aisée. En conséquence, si vous hébergez des données et des systèmes critiques, [faites des sauvegardes](/admin/backups). Et dans tous les cas, soyez patients et attentifs durant la migration.
 
 - Ne vous précipitez pas à vouloir faire une réinstallation de votre système en pensant que cela serait "plus simple" (sigh). (Une attitude qui revient régulièrement est de vouloir réinstaller son système à la moindre complication...). À la place, si vous rencontrez des problèmes, nous vous encourageons à investiguer, chercher à comprendre et [trouver de l'aide sur le chat ou le forum](/community/help).
 
