Fix broken image srcs, add a script that checks that all img src do exist

--- a/docs/admin/35.email/05.clients.mdx
+++ b/docs/admin/35.email/05.clients.mdx
@@ -23,7 +23,7 @@ Here are the element you should enter to manually configure your mail client (`d
 <Tabs>
 <TabItem value="thunderbird" label="Mozilla Thunderbird">
 
-##### <SmallInline url='/img/thunderbird.png'/> Configure Thunderbird Desktop (on a desktop computer)
+##### <SmallInline url='/img/icons/logo-thunderbird.png'/> Configure Thunderbird Desktop (on a desktop computer)
 
 To manually configure a new account in Thunderbird Desktop, add the account information, then click on 'Configure manually'.
 
@@ -41,7 +41,7 @@ You may need to accept the certificate exceptions for fetching mails and after y
 </TabItem>
 <TabItem value="k9" label="K-9 Mail (Thunderbird Mobile)">
 
-##### <SmallInline url='/img/k9mail.png'/> Configure K-9 Mail / Thunderbird Mobile (on Android)
+##### <SmallInline url='/img/icons/logo-k9.png'/> Configure K-9 Mail / Thunderbird Mobile (on Android)
 
 Follow the following steps. (As for Thunderbird Desktop, you might need to accept certificates at some points)
 
@@ -58,16 +58,16 @@ Follow the following steps. (As for Thunderbird Desktop, you might need to accep
 </TabItem>
 <TabItem value="dekko" label="Dekko">
 
-##### <SmallInline url='/img/dekko-app.png'/> Configure Dekko (on Ubuntu Touch)
+##### <SmallInline url='/img/icons/logo-dekko.png'/> Configure Dekko (on Ubuntu Touch)
 
 The first time you can simply choose "Add account". If you already have an account configured, tap the hamburger menu then tap the gear, choose Mail, Accounts and press the '+'-symbol.
 
 Then you choose IMAP. Fill in the fields and press Next. Now Dekko will look for the configuration. Check that all fields are correct. Make sure you have your YunoHost username, NOT your email address and choose "Allow untrusted certificates". Do this for IMAP and SMTP and press Next. Dekko will now synchronise the account after which you are done. Congratz!
 
-<img src="/img/dekko_config_1.png" width="280"/>
-<img src="/img/dekko_config_2.png" width="280"/>
-<img src="/img/dekko_config_3.png" width="280"/>
-<img src="/img/dekko_config_4.png" width="280"/>
+<img src="/img/softwares/dekko_config_1.png" width="280"/>
+<img src="/img/softwares/dekko_config_2.png" width="280"/>
+<img src="/img/softwares/dekko_config_3.png" width="280"/>
+<img src="/img/softwares/dekko_config_4.png" width="280"/>
 
 </TabItem>
 </Tabs>
