--- a/docs/admin/45.tutorials/05.domains/dns_local_network.mdx
+++ b/docs/admin/45.tutorials/05.domains/dns_local_network.mdx
@@ -26,12 +26,12 @@ The goal here is to create a network wide redirection handled by your router. Th
 If you haven't found your server private IP, you may find it using the SFR box admin panel:  
     Go to Network tab > General
 
-<img src="/img/ip_serveur.png" width="800"/>
+<img src="/img/providers/ip_serveur.png" width="800"/>
 
 #### Configure SFR box's DNS
 
 Go to Network tab > DNS and add your domain name to the box's DNS.
-<img src="/img/dns_9box.png" width="800"/>
+<img src="/img/providers/dns_9box.png" width="800"/>
 
 ## Configure [hosts](https://en.wikipedia.org/wiki/Host_%28Unix%29) file on client workstation
 
