--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
@@ -23,7 +23,7 @@ Hier sind die Elemente, die Sie eingeben sollten, um Ihren Mail-Client manuell z
 <Tabs>
 <TabItem value="thunderbird" label="Mozilla Thunderbird">
 
-#### <SmallInline url='/img/thunderbird.png'/> Thunderbird Desktop konfigurieren (auf einem Desktop-Computer)
+#### <SmallInline url='/img/icons/logo-thunderbird.png'/> Thunderbird Desktop konfigurieren (auf einem Desktop-Computer)
 
 Um ein neues Konto in Thunderbird Desktop manuell zu konfigurieren, fügen Sie die Kontoinformationen hinzu und wählen dann Port 993 mit SSL/TLS für IMAP und Port 587 mit STARTTLS für SMTP. Wählen Sie anschließend "Normales Passwort" für die Authentifizierung und klicken Sie auf "Erweiterte Konfiguration". Möglicherweise müssen Sie die Zertifikatsausnahmen für das Abrufen von E-Mails und nach dem Senden Ihrer ersten E-Mail akzeptieren. Vergessen Sie nicht, den Punkt vor dem Domainnamen zu entfernen.
 
@@ -35,7 +35,7 @@ Um ein neues Konto in Thunderbird Desktop manuell zu konfigurieren, fügen Sie d
 </TabItem>
 <TabItem value="k9" label="K-9 Mail (Thunderbird Mobile)">
 
-#### <SmallInline url='/img/k9mail.png'/> K-9 Mail / Thunderbird Mobile konfigurieren (auf Android)
+#### <SmallInline url='/img/icons/logo-k9.png'/> K-9 Mail / Thunderbird Mobile konfigurieren (auf Android)
 
 Führen Sie die folgenden Schritte aus. (Wie bei Thunderbird Desktop müssen Sie möglicherweise an einigen Stellen Zertifikate akzeptieren)
 
@@ -53,15 +53,15 @@ Führen Sie die folgenden Schritte aus. (Wie bei Thunderbird Desktop müssen Sie
 </TabItem>
 <TabItem value="dekko" label="Dekko">
 
-#### <SmallInline url='/img/dekko-app.png'/> Dekko konfigurieren (auf Ubuntu Touch)
+#### <SmallInline url='/img/icons/logo-dekko.png'/> Dekko konfigurieren (auf Ubuntu Touch)
 
 Beim ersten Mal können Sie einfach "Konto hinzufügen" wählen. Wenn Sie bereits ein Konto eingerichtet haben, tippen Sie auf das Hamburger-Menü, dann auf das Zahnrad, wählen Sie Mail, Konten und drücken Sie das '+'-Symbol.
 
 Dann wählen Sie IMAP. Füllen Sie die Felder aus und drücken Sie auf Weiter. Jetzt sucht Dekko nach der Konfiguration. Überprüfen Sie, ob alle Felder korrekt ausgefüllt sind. Vergewissern Sie sich, dass Sie Ihren YunoHost-Benutzernamen und NICHT Ihre Mailadresse eingeben und wählen Sie "Nicht vertrauenswürdige Zertifikate zulassen". Tun Sie dies für IMAP und SMTP und drücken Sie auf Weiter. Dekko wird nun das Konto synchronisieren, danach sind Sie fertig. Herzlichen Glückwunsch!
 
-<img src="/img/dekko_config_1.png" width="280"/>
-<img src="/img/dekko_config_2.png" width="280"/>
-<img src="/img/dekko_config_3.png" width="280"/>
-<img src="/img/dekko_config_4.png" width="280"/>
+<img src="/img/softwares/dekko_config_1.png" width="280"/>
+<img src="/img/softwares/dekko_config_2.png" width="280"/>
+<img src="/img/softwares/dekko_config_3.png" width="280"/>
+<img src="/img/softwares/dekko_config_4.png" width="280"/>
   </TabItem>
 </Tabs>
