--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/45.tutorials/25.external_storage.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/45.tutorials/25.external_storage.mdx
@@ -256,6 +256,6 @@ rm -Rf /home/yunohost.app.bkp
 rm -Rf /var/mail.bkp
 ```
 
-## img src="/img/tada.png" height="32rem"/> Félicitations !
+## 🎉 Félicitations !
 
 Si vous êtes arrivé jusqu'ici sans dommage, vous avez désormais un serveur qui tire parti d'un ou de plusieurs disques de stockage.
