--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
@@ -11,7 +11,7 @@ Una delle caratteristiche principali di YunoHost è la possibilità di installar
 
 Applications can be installed and managed through the webadmin interface in <HighlightApplications/> or through commands of the `yunohost app` category.
 
-<Figure alt="Apps list" caption="Apps list in the webadmin, with its Install button." src="/img/apps_list.png"/>
+<Figure alt="Apps list" caption="Apps list in the webadmin, with its Install button." src="/img/webadmin/apps_list.png"/>
 
 The application catalog and its categories can be browsed directly from the webadmin by clicking on the <HighlightAppInstall/> button in the apps list, or from this documentation.
 
@@ -30,7 +30,7 @@ Diciamo che volete installare una *Custom Webapp*. Prima di avviare i passi dell
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
-    <Figure alt="Custom Webapp install form" src="/img/app_install_form.png" caption="Pre-installation form of the Custom Webapp"/>
+    <Figure alt="Custom Webapp install form" src="/img/webadmin/app_install_form.png" caption="Pre-installation form of the Custom Webapp"/>
   </TabItem>
   <TabItem value="cli" label="From the command line">
     <Figure alt="Custom Webapp install form in CLI" src="/img/app_install_form_cli.png" caption="Pre-installation form of the Custom Webapp in CLI"/>
@@ -99,7 +99,7 @@ Alcune impostazioni possono essere gestite da YunoHost dopo l'installazione come
 
 È possibile accedere alla pagina relative alle operazioni dell'applicazione cliccando sul nome nella lista delle applicazioni.
 
-<Figure alt="Application operations page" src="/img/app_config_operations.png" caption="Application operations page in the webadmin"/>
+<Figure alt="Application operations page" src="/img/webadmin/app_config_operations.png" caption="Application operations page in the webadmin"/>
 
 Da questa pagina è anche possibile eliminare l'applicazione.
 
@@ -132,7 +132,7 @@ I pannelli di configurazione non sono realizzati per modificare ogni aspetto del
 
 È possibile accedere alla pagina relative alle operazioni dell'applicazione cliccando sul bottone `[fa=cogs /] Configurazione`.
 
-<Figure alt="My Webapp configuration panel" src="/img/app_config_panel.png" caption="Configuration panel for My Webapp"/>
+<Figure alt="My Webapp configuration panel" src="/img/webadmin/app_config_panel.png" caption="Configuration panel for My Webapp"/>
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
