--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/05.configuration.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/05.configuration.mdx
@@ -26,7 +26,7 @@ Pour un VPS, utilisez l'adresse IP publique au lieu du domaine ou adresse locale
     :::
 
     Vous devriez ensuite obtenir cette page :
-    <Figure caption="Capture d'écran de la page de configuration initiale" src="/img/postinstall_web.png"/>
+    <Figure caption="Capture d'écran de la page de configuration initiale" src="/img/webadmin/postinstall_web.png"/>
   </TabItem>
   <TabItem value="cli" label="Depuis la ligne de commande">
     Vous pouvez aussi lancer la post-installation avec la commande `yunohost tools postinstall` directement sur le serveur ou [via SSH](/admin/command_line).
@@ -94,7 +94,7 @@ Notamment, les installations WSL ou sur machines virtuelles ne seront générale
   <TabItem value="web" label="(Recommandé) Depuis l'interface web">
     Pour lancer le diagnostic, allez dans l'Administration Web dans la partie Diagnostic. Vous devriez obtenir un écran comme celui-ci :
 
-    <Figure caption="Capture d'écran du panneau de diagnostic" src="/img/diagnostic.png"/>
+    <Figure caption="Capture d'écran du panneau de diagnostic" src="/img/webadmin/diagnostic.png"/>
   </TabItem>
   <TabItem value="cli" label="Depuis la ligne de commande">
     ```bash
