--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/20.users/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/20.users/index.mdx
@@ -33,9 +33,9 @@ The password should be at least 8 characters - though it is good practice to use
 
 Finalize the user creation by clicking on the `Save` button.
 
-<Figure caption="From the main menu of the webadmin, open `Users`." alt="Main menu" src="/img/create_user_1.png"/>
-<Figure caption="From the top of the users list, click on `+ New user`." alt="Users list" src="/img/create_user_2.png"/>
-<Figure caption="Fill in the form." alt="User creation form" src="/img/create_user_3.png"/>
+<Figure caption="From the main menu of the webadmin, open `Users`." alt="Main menu" src="/img/webadmin/create_user_1.png"/>
+<Figure caption="From the top of the users list, click on `+ New user`." alt="Users list" src="/img/webadmin/create_user_2.png"/>
+<Figure caption="Fill in the form." alt="User creation form" src="/img/webadmin/create_user_3.png"/>
 
 ## User groups and permissions
 
