--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
@@ -11,7 +11,7 @@ L'une des fonctionnalités principales de YunoHost est la possibilité d'install
 
 Applications can be installed and managed through the webadmin interface in <HighlightApplications/> or through commands of the `yunohost app` category.
 
-<Figure alt="Apps list" caption="Apps list in the webadmin, with its Install button." src="/img/apps_list.png"/>
+<Figure alt="Apps list" caption="Apps list in the webadmin, with its Install button." src="/img/webadmin/apps_list.png"/>
 
 The application catalog and its categories can be browsed directly from the webadmin by clicking on the <HighlightAppInstall/> button in the apps list, or from this documentation.
 
@@ -29,7 +29,7 @@ Let's say you want to install a *Custom Webapp*. Before actually running the ins
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
-    <Figure alt="Custom Webapp install form" src="/img/app_install_form.png" caption="Pre-installation form of the Custom Webapp"/>
+    <Figure alt="Custom Webapp install form" src="/img/webadmin/app_install_form.png" caption="Pre-installation form of the Custom Webapp"/>
   </TabItem>
   <TabItem value="cli" label="From the command line">
     <Figure alt="Custom Webapp install form in CLI" src="/img/app_install_form_cli.png" caption="Pre-installation form of the Custom Webapp in CLI"/>
@@ -98,7 +98,7 @@ After installation, some settings handled by YunoHost can be tweaked, such as us
 
 You can access the app's operations page by clicking its name in the applications list.
 
-<Figure alt="Application operations page" src="/img/app_config_operations.png" caption="Application operations page in the webadmin"/>
+<Figure alt="Application operations page" src="/img/webadmin/app_config_operations.png" caption="Application operations page in the webadmin"/>
 
 You can also delete the application from this page.
 
@@ -130,7 +130,7 @@ Configuration panels are *not* meant to tweak every aspects of the apps. You wil
 
 The configuration panels are accessible in the webadmin in their operations page, trough the <Highlight no_break={true} color='darkblue'><FAIcon icon="fa-cogs"/> Config panel</Highlight> button.
 
-<Figure alt="My Webapp configuration panel" src="/img/app_config_panel.png" caption="Configuration panel for My Webapp"/>
+<Figure alt="My Webapp configuration panel" src="/img/webadmin/app_config_panel.png" caption="Configuration panel for My Webapp"/>
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
