--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
@@ -28,7 +28,7 @@ Ecco i valori da immettere per la configurazione manuale del vostro client mail 
 <Tabs>
 <TabItem value="thunderbird" label="Mozilla Thunderbird">
 
-#### <SmallInline url='/img/thunderbird.png'/>  Configurazione di Thunderbird Desktop (su computer desktop)
+#### <SmallInline url='/img/icons/logo-thunderbird.png'/>  Configurazione di Thunderbird Desktop (su computer desktop)
 
 To manually configure a new account in Thunderbird Desktop, add the account information, then click on 'Configure manually'.
 
@@ -61,16 +61,16 @@ Follow the following steps. (As for Thunderbird Desktop, you might need to accep
 </TabItem>
 <TabItem value="dekko" label="Dekko">
 
-##### <SmallInline url='/img/dekko-app.png'/> Configurazione di Dekko (per Ubuntu Touch)
+##### <SmallInline url='/img/icons/logo-dekko.png'/> Configurazione di Dekko (per Ubuntu Touch)
 
 Se nessun account è già configurato, potete semplicemente scegliere "Aggiungi account". Se un account è già presente, premete sul menù a panino e in seguito sugli ingranaggi, scegliete Mail, Accounts e il simbolo '+'.
 
 Selezionate IMAP. Compilate i campi e premete Successivo. Dekko cercherà la configurazione necessaria. Controllate che tutti i campi siano corretti. Assicuratevi di aver inserito come nome utente il nome utente di YunoHost e NON il vostro indirizzo mail, scegliete "Autorizza certificati non firmati". Effettuate queste operazioni per IMAP e per SMTP e premete Successivo. Aspettate che Dekko termini la sincronizzazione dell'account. Avete finito! Complimenti!
 
-<img src="/img/dekko_config_1.png" width="280"/>
-<img src="/img/dekko_config_2.png" width="280"/>
-<img src="/img/dekko_config_3.png" width="280"/>
-<img src="/img/dekko_config_4.png" width="280"/>
+<img src="/img/softwares/dekko_config_1.png" width="280"/>
+<img src="/img/softwares/dekko_config_2.png" width="280"/>
+<img src="/img/softwares/dekko_config_3.png" width="280"/>
+<img src="/img/softwares/dekko_config_4.png" width="280"/>
 
   </TabItem>
 </Tabs>
