--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -1,5 +1,5 @@
 ---
-title: Choisissez votre mode d'auto-hébergement
+title: Choisir son mode d'auto-hébergement
 ---
 
 Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
@@ -81,7 +81,7 @@ export const styleDanger = {
     </tr>
     <tr>
       <td style={styleNone}>Limitations FAI possibles</td>
-      <td style={styleDanger}>Oui<br/><small>(Voyez <Link to="/admin/get_started/providers/isp/">ici</Link>)</small></td>
+      <td style={styleDanger}>Oui<br/><small>(Voir <Link to="/admin/get_started/providers/isp/">ici</Link>)</small></td>
       <td style={styleGood}>Contournées par VPN</td>
       <td style={styleGood}>En général non</td>
     </tr>
