--- a/docs/admin/15.command_line.mdx
+++ b/docs/admin/15.command_line.mdx
@@ -12,16 +12,13 @@ import TabItem from '@theme/TabItem';
 The command line interface (CLI) is, in the computer world, the original (and more technical) way of interacting with a computer compared to graphical interface. Command line interfaces are generally said to be more complete, powerful or efficient than a graphical interface, though also more difficult to learn.
 
 ## How to connect
-### Login credentials
 
-<Tabs>
-<TabItem value="before-postinstall" label="Before running the initial configuration (post-installation)" default>
+### Credentials *before* running the postinstall
 
 - If you are **installing at home**, the default credentials are login: `root` and password: `yunohost` (or `1234` if you flashed an armbian image)
 - If you are **installing a remote server (VPS)**, your provider should have communicated you the login and password (or allowed you to configure an SSH key)
 
-</TabItem>
-<TabItem value="after-postinstall" label="After running the post-installation" default>
+### Credentials *after* running the postinstall
 
 
 During the postinstall, you've been asked to choose an user and an administration password. This user account allows you to connect to the server through SSH. The password becomes also the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the `admin` user is unusable).
@@ -29,9 +26,6 @@ During the postinstall, you've been asked to choose an user and an administratio
 :::tip
 If you connected with the administration account and would like to become `root` for convenience (e.g. to avoid typing `sudo` in front of every command), you can become `root` using the command `sudo su` or `sudo -i`.
 :::
-
-</TabItem>
-</Tabs>
 
 ### Address to use
 
