--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/15.command_line.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/15.command_line.mdx
@@ -13,25 +13,18 @@ L'interface en ligne de commande (CLI) est, en informatique, la manière origina
 
 ## Comment se connecter ?
 
-### Identifiant à utiliser
-
-<Tabs>
-<TabItem value="before-postinstall" label="Before running the initial configuration (post-installation)" default>
+### Identifiants *avant* la postinstall
 
 - Si vous faites une **installation à la maison**, les identifiants par défaut sont login: `root`, mot de passe: `yunohost` (ou `1234` si vous partez d'une image armbian).
 - Si vous faites une **installation sur un serveur distant (VPS)**, votre fournisseur devrait vous avoir communiqué le login et le mot de passe (ou vous proposer de configurer une clé SSH).
 
-</TabItem>
-<TabItem value="after-postinstall" label="After running the post-installation" default>
+### Identifiants *après* la postinstall
 
 Durant la post-installation, vous avez défini un compte et un mot de passe d'administration. Le compte défini lors de la post-installation vous permet de vous connecter en SSH. De plus, le mot de passe défini dans la post-installation devient le nouveau mot de passe pour l'utilisateur `root`. Enfin, **la connexion en SSH avec l'utilisateur `root` est désactivée et il vous faut utiliser le compte défini durant la post-installation !**. L'exception à cette règle est qu'il reste possible de se logger en root *depuis le réseau local - ou depuis une console en direct sur la machine* (ce qui peut être utile dans l'éventualité où le serveur LDAP est inactif et l'utilisateur admin ne fonctionne plus).
 
 :::tip
 Si vous êtes connecté en tant avec le compte d'administration et souhaitez devenir `root` pour plus de confort (par exemple, ne pas avoir à taper `sudo` à chaque commande), vous pouvez devenir `root` en tapant `sudo su` ou `sudo -i`.
 :::
-
-</TabItem>
-</Tabs>
 
 ### Adresse à utiliser
 
