--- a/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
@@ -8,6 +8,8 @@ pagination_next: admin/get_started/guidelines
 sidebar_class_name: hidden
 ---
 
+import InitialConfiguration from "./_configuration.mdx";
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import YunoHostImagesList from '@site/src/components/YunoHostImagesList';
