--- a/docs/admin/45.tutorials/25.external_storage.mdx
+++ b/docs/admin/45.tutorials/25.external_storage.mdx
@@ -153,7 +153,7 @@ Then, ideally, we switch to maintenance mode the applications that might be writ
 Example, for nextcloud:
 
 ```bash
-sudo -u nextcloud /var/www/nextcloud/occ maintenance:mode --on
+sudo -u nextcloud /usr/bin/php /var/www/nextcloud/occ maintenance:mode --on
 ```
 
 Example, for mail:
@@ -206,7 +206,7 @@ ls -la /var/mail/
 From here you can stop maintenance mode, the command below is to be adapted depending on the services you have stopped.
 
 ```bash
-sudo -u nextcloud /var/www/nextcloud/occ maintenance:mode --off
+sudo -u nextcloud /usr/bin/php /var/www/nextcloud/occ maintenance:mode --off
 systemctl start postfix
 systemctl start dovecot
 ```
